--- a/index.html
+++ b/index.html
@@ -314,5 +314,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/combine/npm/cyf@0.0.2/js/jquery-2.1.1.min.js,gh/ChenYFan/CDN@master/js/tools.cyfan.top.js,npm/cyf@0.0.7/k.js,npm/cyf@0.0.7/app.js,npm/cyf@0.0.2/js/patternLock.min.js"></script>
+<script>mhnUI.page.show()</script><!--暂时取消锁屏-->
 </body>
 </html>
