--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="credits">
-<div class="mhn-ui-icon" data-href="https://tester.cyfan.top/MagicMusic/">
+<div class="mhn-ui-icon" data-href="https://music.cyfan.top">
 <span data-color="#f39c12"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/3.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">免费音乐</div>
 </div>
