--- a/index.html
+++ b/index.html
@@ -188,6 +188,16 @@
 <div class="mhn-ui-icon-title">无限网盘</div>
 </div>
 </div>
+	
+	
+	<div class="mhn-ui-col" data-filter="credits">
+<div class="mhn-ui-icon" data-href="https://um.cyfan.top/">
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@1.0.3/music.png" style="width: 55px;"></span>
+<div class="mhn-ui-icon-title">音乐解锁/div>
+</div>
+</div>
+	
+	
 	<div class="mhn-ui-col" data-filter="social"> <div class="mhn-ui-icon" data-href="https://pandownload.cyfan.top/"> <span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/gh/ChenYFan/CDN/img/com.baidu.netdisk.png" style="width: 55px;"></span> <div class="mhn-ui-icon-title">Pandownload</div> </div> </div>
 <div class="mhn-ui-col" data-filter="general">
 <div class="mhn-ui-icon" data-open="page-credits">
