--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 	<div class="mhn-ui-col" data-filter="credits">
 <div class="mhn-ui-icon" data-href="https://um.cyfan.top/">
 <span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@1.0.3/music.png" style="width: 55px;"></span>
-<div class="mhn-ui-icon-title">音乐解锁/div>
+<div class="mhn-ui-icon-title">音乐解锁</div>
 </div>
 </div>
 	
