--- a/vipvideo/index.html
+++ b/vipvideo/index.html
@@ -63,12 +63,8 @@
      <div class="input-group" style="width: 100%;">
       <span class="input-group-addon input-lg" style="width: 80px; ">选择接口</span>
       <select class="form-control input-lg" id="jk">
-      	<option value="https://jx.du2.cc/?url=" selected="">6</option> 
-      	<option value="https://jx.598110.com/?url=" selected="">5</option>
-	  <option value="https://jx.618ge.com/?url=" selected="">4</option>
-    <option value="https://vip.jlsprh.com/?url=" selected="">3</option>
-	<option value="https://jx.drgxj.com/?url=" selected="">2</option> 
-      <option value="https://jx.598110.com/?url=" selected="">1</option> 
+      	<option value="https://jx.618g.com/?url=" selected="">1</option> 
+	      
 	  
   </select>
 	
